--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -6,7 +6,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-    <script>   M.AutoInit(); </script>
+    
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,13 +15,20 @@
   <body>
     
   <nav>
-    <div class="nav-wrapper teal lighten-2">
-      <a href="#" class="brand-logo center"> Representation</a>
+    <div class="nav-wrapper blue">
+      <a href="#" class="brand-logo center"> 
+        <!-- Representation -->
+      </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       </ul>
     </div>
   </nav>
-        
+
+  <!-- <header>  </header> -->
+  <h1 class="center-align">Representation</h1>
+  <h5>This site shows how lgbtq characters are represented in various forms of media.
+  </h5>
+  
   <script> document.addEventListener('DOMContentLoaded', function() {
     var elems = document.querySelectorAll('select');
     var instances = M.FormSelect.init(elems, options);
@@ -57,7 +64,7 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    
+    <!-- <script>   M.AutoInit(); </script> -->
   </body>
 </html>
       
