--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -25,46 +25,59 @@
   </nav>
 
   <!-- <header>  </header> -->
+  
   <h1 class="center-align">Representation</h1>
-  <h5>This site shows how lgbtq characters are represented in various forms of media.
-  </h5>
+    <div class="row">
+      <div class="col s12 m3 l2"></div>
+      <div class="col s12 m6 l8">
+        <h5>This site shows how lgbtq characters are represented in various forms of media.
+        </h5>
+        <p>
+        Choose an option to see list <br>
+        </p>
+        <div class="input-field ">
+          <select>
+            <option value=""  selected>Select</option>
+            <option value="1">Movies</option>
+            <option value="2">Television Shows</option>
+            <option value="3">Comics/Manga</option>
+          </select>
+          <label>Media</label>
+        </div>
+        
+         <div class="input-field ">
+          <select>
+            <option value=""  selected>Select</option>
+            <option value="1">Lesbian</option>
+            <option value="2">Gay</option>
+            <option value="3">Bisexual</option>
+            <option value="3">Transgender</option>
+            <option value="3">Intersex</option>
+            <option value="3">Asexual</option>
+          </select>
+          <label>Type of Representation</label>
+        </div>
+    </div>
+      <div class="col s12 m3 l2"></div>
+      
+    </div>
+    
   
-  <script> document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('select');
-    var instances = M.FormSelect.init(elems, options);
-  });
-</script>
-<p>
-    Choose an option to see list <br>
-</p>
-
-  <!-- <div class="input-field col s12">
-    <select>
-      <option value="" disabled selected>Choose your option</option>
-      <option value="1">Option 1</option>
-      <option value="2">Option 2</option>
-      <option value="3">Option 3</option>
-    </select>
-    <label>Materialize Select 1</label>
-  </div>
   
-  <p>
-     <br> <br>
-</p>
 
-  <div class="input-field col s12">
-    <select>
-      <option value="" disabled selected>Choose your option</option>
-      <option value="1">Option 1</option>
-      <option value="2">Option 2</option>
-      <option value="3">Option 3</option>
-    </select>
-    <label>Materialize Select 2</label>
-  </div> -->
+
+
+  
+
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <!-- <script>   M.AutoInit(); </script> -->
+    <script>   M.AutoInit(); </script>
+    <script> document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('select');
+      var instances = M.FormSelect.init(elems, options);
+    });
+  </script>
   </body>
 </html>
       
