--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Used materialze api: https://materializecss.com/  -->
+    
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-    
-
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="js/script.js"></script>
   </head>
 
   <body>
@@ -35,9 +35,9 @@
         <p>
         Choose an option to see list <br>
         </p>
-        <div class="input-field ">
+        <div class="input-field " id="sele">
           <select>
-            <option value=""  selected>Select</option>
+            <option value="" disabled selected>Select</option>
             <option value="1">Movies</option>
             <option value="2">Television Shows</option>
             <option value="3">Comics/Manga</option>
@@ -51,9 +51,9 @@
             <option value="1">Lesbian</option>
             <option value="2">Gay</option>
             <option value="3">Bisexual</option>
-            <option value="3">Transgender</option>
-            <option value="3">Intersex</option>
-            <option value="3">Asexual</option>
+            <option value="4">Transgender</option>
+            <option value="5">Intersex</option>
+            <option value="6">Asexual</option>
           </select>
           <label>Type of Representation</label>
         </div>
@@ -72,12 +72,12 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>   M.AutoInit(); </script>
+    <!-- <script>   M.AutoInit(); </script>
     <script> document.addEventListener('DOMContentLoaded', function() {
       var elems = document.querySelectorAll('select');
       var instances = M.FormSelect.init(elems, options);
     });
-  </script>
+  </script> -->
   </body>
 </html>
       
