--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -38,16 +38,16 @@
         <div class="input-field " id="sele">
           <select>
             <option value="" disabled selected>Select</option>
-            <option value="1">Movies</option>
-            <option value="2">Television Shows</option>
-            <option value="3">Comics/Manga</option>
+            <option value="movies">Movies</option>
+            <option value="tv">Television Shows</option>
+            <option value="comics">Comics/Manga</option>
           </select>
           <label>Media</label>
         </div>
         
          <div class="input-field ">
           <select>
-            <option value=""  selected>Select</option>
+            <option value="" disabled selected>Select</option>
             <option value="1">Lesbian</option>
             <option value="2">Gay</option>
             <option value="3">Bisexual</option>
@@ -72,8 +72,8 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <!-- <script>   M.AutoInit(); </script>
-    <script> document.addEventListener('DOMContentLoaded', function() {
+    <script>   M.AutoInit(); </script>
+    <!-- <script> document.addEventListener('DOMContentLoaded', function() {
       var elems = document.querySelectorAll('select');
       var instances = M.FormSelect.init(elems, options);
     });
