--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -39,8 +39,8 @@
           <select>
             <option value="" disabled selected>Select</option>
             <option value="movies">Movies</option>
-            <option value="tv">Television Shows</option>
-            <option value="comics">Comics/Manga</option>
+            <option value="tv">Television</option>
+            <option value="comics">Radio</option>
           </select>
           <label>Media</label>
         </div>
