--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -57,6 +57,7 @@
           </select>
           <label>Type of Representation</label>
         </div>
+        <a class="waves-effect waves-light btn-large blue center-align">View List</a>
     </div>
       <div class="col s12 m3 l2"></div>
       
