--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -57,7 +57,9 @@
           </select>
           <label>Type of Representation</label>
         </div>
-        <a class="waves-effect waves-light btn-large blue center-align">View List</a>
+        <div class = "center-align">
+        <a class="waves-effect waves-light btn-large blue ">View List</a>
+      </div>
     </div>
       <div class="col s12 m3 l2"></div>
       
